@@ -1,5 +1,9 @@
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.494 2005/12/31 08:03:22 rocket Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.495 2006/01/03 14:25:08 rocket Exp $
+
+  03 Jan 2006; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py:
+  Remove chost/cflags etc. warning messages
 
   31 Dec 2005; Eric Edgar <rocket@gentoo.org>
   modules/generic_stage_target.py:
